--- a/livelessons-bootstrap/livelessons-bootstrap-gradle/build.gradle
+++ b/livelessons-bootstrap/livelessons-bootstrap-gradle/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-	ext { springBootVersion = '1.2.1.RELEASE' }
+	ext { springBootVersion = '1.3.0.M2' }
 	repositories { mavenCentral() }
 	dependencies { classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}") }
 }
